public class Mensaje {
    public void mensajeLn(String mensaje) {
        System.out.println(mensaje);
    }

    public void mensaje(String mensaje) {
        System.out.print(mensaje);
    }
}
